--- a/css/style-VERSIONED.css
+++ b/css/style-VERSIONED.css
@@ -2776,18 +2776,18 @@ ul.interview .speaker {
 }
 
 .admonition.tip::before {
-    background-image: url('/static/img/icon/icons.svg?v=1742305160#info-circle-regular');
+    background-image: url('/static/img/icon/icons.svg?v=1742322532#info-circle-regular');
 }
 .admonition.note::before {
-    background-image: url('/static/img/icon/icons.svg?v=1742305160#hand-point-right-regular');
+    background-image: url('/static/img/icon/icons.svg?v=1742322532#hand-point-right-regular');
     filter: invert(1);
 }
 .admonition.warning::before {
-    background-image: url('/static/img/icon/icons.svg?v=1742305160#triangle-exclamation-regular');
+    background-image: url('/static/img/icon/icons.svg?v=1742322532#triangle-exclamation-regular');
     filter: invert(1);
 }
 .admonition.error::before {
-    background-image: url('/static/img/icon/icons.svg?v=1742305160#skull-crossbones-solid');
+    background-image: url('/static/img/icon/icons.svg?v=1742322532#skull-crossbones-solid');
     padding: 0.75em;
     top: 0;
     filter: invert(1);
@@ -5884,7 +5884,7 @@ body.page-dnm-arrest .table-wrapper#data-table td:last-of-type {
 
 .popup .popframe-loading-spinner-view::before {
     content: "";
-    background-image: url('/static/img/icon/icons.svg?v=1742305160#circle-notch-light');
+    background-image: url('/static/img/icon/icons.svg?v=1742322532#circle-notch-light');
     animation: fa-spin 2s infinite linear;
     position: absolute;
     width: calc(100% - 1em);
@@ -6070,7 +6070,7 @@ body.page-dnm-arrest .table-wrapper#data-table td:last-of-type {
     */
 .popup.image:not(.dimensions-specified).loading-failed::after {
     content: "";
-    background-image: url('/static/img/icon/icons.svg?v=1742305160#xmark-regular');
+    background-image: url('/static/img/icon/icons.svg?v=1742322532#xmark-regular');
     background-position: center;
     box-sizing: border-box;
     margin: 8px;
@@ -6583,7 +6583,7 @@ body.page-dnm-arrest .table-wrapper#data-table td:last-of-type {
 
 .popin .popframe-loading-spinner-view::before {
     content: "";
-    background-image: url('/static/img/icon/icons.svg?v=1742305160#circle-notch-light');
+    background-image: url('/static/img/icon/icons.svg?v=1742322532#circle-notch-light');
     animation: fa-spin 2s infinite linear;
     position: absolute;
     width: calc(100% - 1em);
@@ -7615,7 +7615,7 @@ body.page-dnm-arrest .table-wrapper#data-table td:last-of-type {
 
 #image-focus-overlay .help-overlay::after {
     content: "";
-    background-image: url('/static/img/icon/icons.svg?v=1742305160#question');
+    background-image: url('/static/img/icon/icons.svg?v=1742322532#question');
     background-origin: content-box;
     background-clip: content-box;
     position: absolute;
@@ -7819,7 +7819,7 @@ body.page-dnm-arrest .table-wrapper#data-table td:last-of-type {
 .image-wrapper.focusable.small-image::after {
     content: "";
     background-color: var(--SA-image-focus-image-hover-tooltip-inverted-background-color);
-    background-image: url('/static/img/icon/icons.svg?v=1742305160#magnifying-glass-plus-light');
+    background-image: url('/static/img/icon/icons.svg?v=1742322532#magnifying-glass-plus-light');
     background-size: 56px 56px;
     background-origin: content-box;
     background-repeat: no-repeat;
@@ -8365,7 +8365,7 @@ a.include-loading-failed:empty {
 }
 
 a.include-loading.include-spinner {
-    --spinner-image: url('/static/img/icon/icons.svg?v=1742305160#circle-notch-solid');
+    --spinner-image: url('/static/img/icon/icons.svg?v=1742322532#circle-notch-solid');
 
     pointer-events: none;
 }
@@ -8446,7 +8446,7 @@ a.include-loading.include-spinner[data-link-icon]:not(:empty)::after {
 .markdownBody div.block-context-highlighted .block-context-highlight-here::before,
 .markdownBody :not(a) > span.block-context-highlighted:empty::before {
     content: "";
-    background-image: url('/static/img/icon/icons.svg?v=1742305160#manicule-right');
+    background-image: url('/static/img/icon/icons.svg?v=1742322532#manicule-right');
     background-origin: content-box;
     background-clip: content-box;
     background-repeat: no-repeat;
@@ -9003,11 +9003,10 @@ a[data-link-icon='↓'] {
 /*= Internal (within-site) links =*/
 /*=------------------------------=*/
 
-a[data-link-icon='𝔊'] {
-    --link-icon-size: 0.90em;
-    --link-icon-offset-x: 0.12em;
+a[data-link-icon='gwern'] {
+	--link-icon-size: 0.60em;
     --link-icon-offset-y: 0.20em;
-    --link-icon-opacity: 0.75;
+    --link-icon-opacity: 0.6;
 }
 
 /*=------------------------------------------=*/
