--- a/css/default.css
+++ b/css/default.css
@@ -4961,6 +4961,15 @@ body.page-dnm-arrest .table-wrapper#data-table td:last-of-type {
     height: var(--GW-popups-popup-max-height);
 }
 
+/*┌──────────────────────┐*/
+/*│ Foreign site popups. │*/
+/*└──────────────────────┘*/
+
+.popup.foreign-site {
+    width: var(--GW-popups-popup-max-width);
+    height: var(--GW-popups-popup-max-height);
+}
+
 /*┌──────────────────────────┐*/
 /*│ Local transclude popups. │*/
 /*└──────────────────────────┘*/
@@ -5557,6 +5566,10 @@ body.page-dnm-arrest .table-wrapper#data-table td:last-of-type {
 /*┌────────────────────────┐*/
 /*│ Local document popins. │*/
 /*└────────────────────────┘*/
+
+/*┌──────────────────────┐*/
+/*│ Foreign site popins. │*/
+/*└──────────────────────┘*/
 
 /*┌──────────────────────────┐*/
 /*│ Local transclude popins. │*/
