--- a/css/special-occasions.css
+++ b/css/special-occasions.css
@@ -6,14 +6,20 @@
 /*= April Fool’s =*/
 /*=--------------=*/
 
-body.special-april-fools {
-    --GW-modified-serif-font-stack: "Great Primer Uncials", var(--GW-serif-font-stack);
-
-    font-family: var(--GW-modified-serif-font-stack);
+.popup.april-fools-special-birthdaycat {
+	width: 514px !important;
+	height: 704px !important;
+	max-height: unset !important;
 }
-
-body.special-april-fools .marginnote {
-    font-family: var(--GW-modified-serif-font-stack);
+.popup.april-fools-special-birthdaycat.offset {
+	left: unset !important;
+	right: 64px !important;
+	top: -800px !important;
+}
+.popup.april-fools-special-birthdaycat.offset.moved {
+	top: 8px !important;
+	transition:
+		top 5s ease;
 }
 
 /*=-----------=*/
