--- a/css/links.css
+++ b/css/links.css
@@ -934,11 +934,11 @@ a[data-link-icon='scholarpedia'] {
     --link-icon-offset-y: 0.20em;
 }
 
-a[data-link-icon='springerlink'] {
-    --link-icon-size: 0.90em;
-    --link-icon-offset-x: 0.15em;
-    --link-icon-offset-y: 0.25em;
-    --link-icon-opacity: 0.75;
+a[data-link-icon='springerlink'] { /* WHITE CHESS KNIGHT '♘'-style SVG icon */
+    --link-icon-size: 0.85em;
+    --link-icon-offset-x: 0.10em;
+    --link-icon-offset-y: 0.4em;
+    --link-icon-opacity: 0.70;
 }
 
 a[data-link-icon='stack-exchange'] {
