--- a/template/unfortunatelytheclockisticking.html
+++ b/template/unfortunatelytheclockisticking.html
@@ -18,7 +18,7 @@ ______________________________________
 ______________________________________
 -->
 <figure>
-  <img id="birthday-cat-meme-image" src="/doc/fiction/humor/2020-04-06-chainsawman-ifunny-unfortunatelytheclockistickingmeme-birthdaycatpluswindowsnotification.jpg" class="image-focus-not" usemap="#image-map-1" alt="Unfortunately, the clock is ticking / the hours are going by. The past increases, the / future recedes. Possibilities decreasing, regrets / mounting. / Do you understand? / [I Understand | remain ignorant]" title="Unfortunately, the clock is ticking…">
+  <img id="birthday-cat-meme-image" src="/doc/fiction/humor/2020-04-06-chainsawman-ifunny-unfortunatelytheclockistickingmeme-birthdaycatpluswindowsnotification.jpg" class="image-focus-not invert-not" usemap="#image-map-1" alt="Unfortunately, the clock is ticking / the hours are going by. The past increases, the / future recedes. Possibilities decreasing, regrets / mounting. / Do you understand? / [I Understand | remain ignorant]" title="Unfortunately, the clock is ticking…">
   <map name="image-map-1">
     <!-- ordered top-down -->
     <area href="https://elgoog.im/space-invaders/" alt="Space Invaders (Google Easter Egg)" title="Space Invaders (Google Easter Egg)" coords="477,46,507,0" shape="rect"> <!-- weird cut-off pillow in top-right on top of the sofa, which has a sort of monochrome pattern on it I thought vaguely looked like a Space Invader. -->
