--- a/css/style-VERSIONED.css
+++ b/css/style-VERSIONED.css
@@ -2776,18 +2776,18 @@ ul.interview .speaker {
 }
 
 .admonition.tip::before {
-    background-image: url('/static/img/icon/icons.svg?v=1743527529#info-circle-regular');
+    background-image: url('/static/img/icon/icons.svg?v=1743875941#info-circle-regular');
 }
 .admonition.note::before {
-    background-image: url('/static/img/icon/icons.svg?v=1743527529#hand-point-right-regular');
+    background-image: url('/static/img/icon/icons.svg?v=1743875941#hand-point-right-regular');
     filter: invert(1);
 }
 .admonition.warning::before {
-    background-image: url('/static/img/icon/icons.svg?v=1743527529#triangle-exclamation-regular');
+    background-image: url('/static/img/icon/icons.svg?v=1743875941#triangle-exclamation-regular');
     filter: invert(1);
 }
 .admonition.error::before {
-    background-image: url('/static/img/icon/icons.svg?v=1743527529#skull-crossbones-solid');
+    background-image: url('/static/img/icon/icons.svg?v=1743875941#skull-crossbones-solid');
     padding: 0.75em;
     top: 0;
     filter: invert(1);
@@ -5894,7 +5894,7 @@ body.page-dnm-arrest .table-wrapper#data-table td:last-of-type {
 
 .popup .popframe-loading-spinner-view::before {
     content: "";
-    background-image: url('/static/img/icon/icons.svg?v=1743527529#circle-notch-light');
+    background-image: url('/static/img/icon/icons.svg?v=1743875941#circle-notch-light');
     animation: fa-spin 2s infinite linear;
     position: absolute;
     width: calc(100% - 1em);
@@ -6080,7 +6080,7 @@ body.page-dnm-arrest .table-wrapper#data-table td:last-of-type {
     */
 .popup.image:not(.dimensions-specified).loading-failed::after {
     content: "";
-    background-image: url('/static/img/icon/icons.svg?v=1743527529#xmark-regular');
+    background-image: url('/static/img/icon/icons.svg?v=1743875941#xmark-regular');
     background-position: center;
     box-sizing: border-box;
     margin: 8px;
@@ -6604,7 +6604,7 @@ body.page-dnm-arrest .table-wrapper#data-table td:last-of-type {
 
 .popin .popframe-loading-spinner-view::before {
     content: "";
-    background-image: url('/static/img/icon/icons.svg?v=1743527529#circle-notch-light');
+    background-image: url('/static/img/icon/icons.svg?v=1743875941#circle-notch-light');
     animation: fa-spin 2s infinite linear;
     position: absolute;
     width: calc(100% - 1em);
@@ -7640,7 +7640,7 @@ body.page-dnm-arrest .table-wrapper#data-table td:last-of-type {
 
 #image-focus-overlay .help-overlay::after {
     content: "";
-    background-image: url('/static/img/icon/icons.svg?v=1743527529#question');
+    background-image: url('/static/img/icon/icons.svg?v=1743875941#question');
     background-origin: content-box;
     background-clip: content-box;
     position: absolute;
@@ -7844,7 +7844,7 @@ body.page-dnm-arrest .table-wrapper#data-table td:last-of-type {
 .image-wrapper.focusable.small-image::after {
     content: "";
     background-color: var(--SA-image-focus-image-hover-tooltip-inverted-background-color);
-    background-image: url('/static/img/icon/icons.svg?v=1743527529#magnifying-glass-plus-light');
+    background-image: url('/static/img/icon/icons.svg?v=1743875941#magnifying-glass-plus-light');
     background-size: 56px 56px;
     background-origin: content-box;
     background-repeat: no-repeat;
@@ -8390,7 +8390,7 @@ a.include-loading-failed:empty {
 }
 
 a.include-loading.include-spinner {
-    --spinner-image: url('/static/img/icon/icons.svg?v=1743527529#circle-notch-solid');
+    --spinner-image: url('/static/img/icon/icons.svg?v=1743875941#circle-notch-solid');
 
     pointer-events: none;
 }
@@ -8471,7 +8471,7 @@ a.include-loading.include-spinner[data-link-icon]:not(:empty)::after {
 .markdownBody div.block-context-highlighted .block-context-highlight-here::before,
 .markdownBody :not(a) > span.block-context-highlighted:empty::before {
     content: "";
-    background-image: url('/static/img/icon/icons.svg?v=1743527529#manicule-right');
+    background-image: url('/static/img/icon/icons.svg?v=1743875941#manicule-right');
     background-origin: content-box;
     background-clip: content-box;
     background-repeat: no-repeat;
@@ -9607,11 +9607,11 @@ a[data-link-icon='scholarpedia'] {
     --link-icon-offset-y: 0.20em;
 }
 
-a[data-link-icon='springerlink'] {
-    --link-icon-size: 0.90em;
-    --link-icon-offset-x: 0.15em;
-    --link-icon-offset-y: 0.25em;
-    --link-icon-opacity: 0.75;
+a[data-link-icon='springerlink'] { /* WHITE CHESS KNIGHT '♘'-style SVG icon */
+    --link-icon-size: 0.85em;
+    --link-icon-offset-x: 0.10em;
+    --link-icon-offset-y: 0.4em;
+    --link-icon-opacity: 0.70;
 }
 
 a[data-link-icon='stack-exchange'] {
@@ -9761,10 +9761,19 @@ a[data-link-icon='worldcat'] {
     --link-icon-offset-x: 0.10em;
 }
 
-a[data-link-icon='pdf'] { /* Adobe Acrobat */
-    --link-icon-size: 0.45em;
-    --link-icon-offset-x: 0.10em;
-    --link-icon-opacity: 0.50;
+/* Similar to the 'W' Wikipedia icon, we shrink the PDF icon on desktop aggressively because there are *so* many. However, they are then illegible on a physical smartphone screen held normally (even if they look OK in a desktop browser's simulation). So we need to have a media-query conditional here. */
+@media not all and (max-width: 649px) {
+	a[data-link-icon='pdf'] { /* Adobe Acrobat */
+	    --link-icon-size: 0.45em;
+	    --link-icon-offset-x: 0.10em;
+	    --link-icon-opacity: 0.50;
+	}
+}
+@media all and (max-width: 649px) {
+    a[data-link-icon='pdf'] {
+        --link-icon-size-default: 0.6em;
+        --link-icon-offset-y-default: 0.25em;
+    }
 }
 
 /*=------------------=*/
