Fix for floating elements just before footnotes section

--- a/css/style-GENERATED.css
+++ b/css/style-GENERATED.css
@@ -3807,6 +3807,7 @@ section.footnotes {
 section.footnotes > hr:first-child {
     position: relative;
     display: flex;
+    clear: both;
     margin: -0.5em 0;
 }
 section.footnotes > hr:first-child::after {
