--- a/css/default.css
+++ b/css/default.css
@@ -2630,6 +2630,7 @@ section.footnotes {
 section.footnotes > hr:first-child {
     position: relative;
     display: flex;
+    clear: both;
     margin: -0.5em 0;
 }
 section.footnotes > hr:first-child::after {
