--- a/css/default.css
+++ b/css/default.css
@@ -1252,6 +1252,15 @@ ol.has-floats > li {
 }
 
 
+/***********************/
+/* FULL-WIDTH ELEMENTS */
+/***********************/
+
+.width-full {
+	z-index: 1;
+}
+
+
 /***********/
 /* FIGURES */
 /***********/
