--- a/css/style-VERSIONED.css
+++ b/css/style-VERSIONED.css
@@ -2429,6 +2429,15 @@ ol.has-floats > li {
 }
 
 
+/***********************/
+/* FULL-WIDTH ELEMENTS */
+/***********************/
+
+.width-full {
+	z-index: 1;
+}
+
+
 /***********/
 /* FIGURES */
 /***********/
