--- a/template/default.html
+++ b/template/default.html
@@ -11,7 +11,7 @@
 
   $if(index)$
   <!-- Google Webmaster requires this tag, but only on the index/homepage -->
-  <meta name="google-site-verification" content="BOhOQI1uMfsqu_DopVApovk1mJD5ZBLfan0s9go3phk" />
+  <meta name="google-site-verification" content="BOhOQI1uMfsqu_DopVApovk1mJD5ZBLfan0s9go3phk">
   $endif$
   <!-- Hint at necessary third-party domains -->
   <link rel="preconnect" href="https://www.googletagmanager.com">
