Add .text-right class

--- a/css/head-GENERATED.css
+++ b/css/head-GENERATED.css
@@ -1272,6 +1272,11 @@ p.empty-graf {
     text-indent: 0;
 }
 
+.markdownBody p.text-right {
+	text-align: right;
+	text-indent: 0;
+}
+
 
 /***************/
 /* BLOCKQUOTES */
