--- a/css/head-GENERATED.css
+++ b/css/head-GENERATED.css
@@ -2096,6 +2096,9 @@ span.date-range {
 a span.date-range {
     font-variant-numeric: tabular-nums;
 }
+/* Allow specifying it manually (helpful for cases like ISBNs) */
+.markdownBody .tabular-nums { font-variant-numeric: tabular-nums; }
+
 span.date-range .subsup {
     align-items: center;
     bottom: 0;
@@ -2387,7 +2390,7 @@ section#newest-blog li::before {
 }
 section#newest-blog li p {
 	--adjusted-line-height: calc(var(--line-height) - 0.20);
-	
+
 	line-height: var(--adjusted-line-height);
 	padding-left: 1em;
 	text-indent: -1em;
