--- a/template/unfortunatelytheclockisticking.html
+++ b/template/unfortunatelytheclockisticking.html
@@ -162,6 +162,7 @@ ______________________________________
       <div class="display-entry"><area alt="remain ignorant" title="remain ignorant" coords="225,595,358,661" shape="rect" href="https://www.youtube.com/watch?v=k85mRPqvMbE"></div> <!-- Crazy Frog – Axel F -->
       <div class="display-entry"><area alt="remain ignorant" title="remain ignorant" coords="225,595,358,661" shape="rect" href="https://www.youtube.com/watch?v=2GF3rWj0A_Y"></div> <!-- Dancing Baby (Oogachaka) -->
       <div class="display-entry"><area alt="remain ignorant" title="remain ignorant" coords="225,595,358,661" shape="rect" href="https://en.wikipedia.org/wiki/Special:Random"></div>
+      <div class="display-entry"><area alt="remain ignorant" title="remain ignorant" coords="225,595,358,661" shape="rect" href="https://neal.fun/internet-artifacts/"></div>
     </div>
   </map>
 </figure>
