--- a/css/initial.css
+++ b/css/initial.css
@@ -2510,7 +2510,8 @@ body.page-doc-index #see-alsos code {
 /*= /index =*/
 /*=--------=*/
 
-body.page-fiction-october.reader-mode-active #page-metadata {
+body.page-fiction-october.reader-mode-active #page-metadata.
+body.page-fiction-october.reader-mode-active #TOC {
 	display: none;
 }
 
