--- a/css/head-GENERATED.css
+++ b/css/head-GENERATED.css
@@ -3012,6 +3012,7 @@ body.page-index[class*='special-christmas'] #sidebar a.logo {
 }
 /*  Elements to be deleted completely.
  */
+body.reader-mode-active .reader-mode-not,
 body.reader-mode-active #sidebar,
 body.reader-mode-active #page-metadata .page-status,
 body.reader-mode-active #page-metadata .page-confidence,
