--- a/css/reader-mode-initial.css
+++ b/css/reader-mode-initial.css
@@ -1,5 +1,6 @@
 /*  Elements to be deleted completely.
  */
+body.reader-mode-active .reader-mode-not,
 body.reader-mode-active #sidebar,
 body.reader-mode-active #page-metadata .page-status,
 body.reader-mode-active #page-metadata .page-confidence,
